Bug 93348 - [HSW,BDW,SKL][GLES 3.1 CTS] ES31-CTS.compute_shader.* segfault
Summary: [HSW,BDW,SKL][GLES 3.1 CTS] ES31-CTS.compute_shader.* segfault
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 11.0
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-11 14:20 UTC by Marta Löfstedt
Modified: 2015-12-14 10:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Marta Löfstedt 2015-12-11 14:20:34 UTC
Software versions:
    4.4.0-040400rc4-generic
    OpenGL version string: 3.0 Mesa 11.2.0-devel (git-4b9a79b)

GPU hardware:
    OpenGL renderer string: Mesa DRI Intel(R) HD Graphics 530 (Skylake GT2) 
    00:02.0 VGA compatible controller [0300]: Intel Corporation Sky Lake Integrated Graphics [8086:1912] (rev 06)

CPU hardware:
    x86_64
    Intel(R) Core(TM) i5-6600K CPU @ 3.50GHz
-----------------
Software versions:
    4.3.0-rc3+
    OpenGL version string: 3.0 Mesa 11.2.0-devel (git-4b9a79b)

GPU hardware:
    OpenGL renderer string: Mesa DRI Intel(R) HD Graphics 5300 (Broadwell GT2) 
    00:02.0 VGA compatible controller [0300]: Intel Corporation Broadwell-U Integrated Graphics [8086:161e] (rev 06)

CPU hardware:
    x86_64
    Genuine Intel(R) CPU 0000 @ 0.60GHz
------------------
Software versions:
    4.4.0-040400rc4-generic
    OpenGL version string: 3.0 Mesa 11.2.0-devel (git-4b9a79b)

GPU hardware:
    OpenGL renderer string: Mesa DRI Intel(R) Haswell Desktop 
    00:02.0 VGA compatible controller [0300]: Intel Corporation Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller [8086:0412] (rev 06)

CPU hardware:
    x86_64
    Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz
-----------------
CTS version:
git@67ae88f31295

command: 
./glcts --deqp-case=ES31-CTS.compute_shader.*

Environment:
Ubuntu 15.10
Mesa built with: --enable-debug
export MESA_GLES_VERSION_OVERRIDE=3.1
export MESA_EXTENSION_OVERRIDE=GL_ARB_compute_shader
-----------------------------

Segfault when running all GLES 3.1 compute shader tests. It is not the same test that segfaults on consecutive runs. However, the most prominent test to segfault is:
ES31-CTS.compute_shader.work-group-size
It is also possible to segfault when only running:
ES31-CTS.compute_shader.work-group-size

The issue is bisected to:
commit 78b81be627734ea7fa50ea246c07b0d4a3a1638a
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Wed Nov 25 14:14:05 2015 -0800

    nir: Get rid of *_indirect variants of input/output load/store intrinsics
Comment 1 Jason Ekstrand 2015-12-11 21:57:17 UTC
Thanks for catching this!  I just pushed a fix.
Comment 2 Marta Löfstedt 2015-12-14 10:55:13 UTC
Thanks for fixing it Jason!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.